# g1c

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  Makefile  README.md
.github/: settings.yml
.github/workflows/: build.yml  dependency-review.yml  ossf.yml  release.yml
src/: app.rs  config.rs  error.rs  logging.rs  main.rs
src/cloud/: auth.rs  instances.rs  mod.rs
src/ui/: dashboard.rs  help.rs  instance_details.rs  mod.rs  styles.rs
