[package]
name = "g1c"
version = "0.1.0"
edition = "2021"
description = "A terminal UI for monitoring Google Cloud Instances, inspired by k9s, e1s, and e2c"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
# Terminal UI
ratatui = "0.23.0"
crossterm = "0.26.1"

# Command line arguments parsing
clap = { version = "4.3.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }

# Error handling
anyhow = "1.0.71"
thiserror = "1.0.40"

# Serialization/deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "json",
  "std",
  "registry",
  "env-filter",
] }
chrono = "0.4.31"

# Configuration
directories = "5.0.1"

# String manipulation
regex = "1.10.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
mockall = "0.11.4"
