[package]
name = "g1c"
version = "0.3.0"
edition = "2021"
description = "A terminal UI for monitoring Google Cloud Instances, inspired by k9s, e1s, and e2c"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
# Terminal UI
ratatui = "0.23.0"
crossterm = "0.29.0"

# Command line arguments parsing
clap = { version = "4.5.53", features = ["derive"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Error handling
anyhow = "1.0.71"
thiserror = "2.0.12"

# Serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.9"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "json",
  "std",
  "registry",
  "env-filter",
] }
chrono = "0.4.42"

# Configuration
directories = "6.0.0"

# String manipulation
regex = "1.10.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
mockall = "0.13.1"
